[workspace]
resolver = "2"
members = [
    "derive",
    "examples/bevy-pong",
    "examples/bevy-pong/client",
    "examples/bevy-pong/server",
    "examples/tokio-simple",
    "examples/tokio-simple/client",
    "examples/tokio-simple/server",
]

[package]
name = "lyanne"
version = "0.2.2"
edition = "2021"

[features]
default = []
client = ["lyanne-derive/client"]
server = ["lyanne-derive/server"]

rt_tokio = ["dep:tokio"]
rt_bevy = [
    "dep:bevy_tasks",
    "dep:async-net",
    "dep:async-lock",
    "dep:futures",
    "dep:futures-timer",
]
rt_smol = [
    "dep:smol",
    "dep:async-executor",
    "dep:async-net",
    "dep:async-lock",
    "dep:futures",
    "dep:futures-timer",
]

sd_bincode = [
    "lyanne-derive/sd_bincode",
    "dep:serde",
    "dep:bincode",
    "dep:bincode",
]

auth_tcp = []
auth_tls = ["dep:tokio-rustls", "dep:futures-rustls", "dep:rustls-pemfile"]

bevy_packet_schedules = ["lyanne-derive/bevy_packet_schedules", "dep:bevy_ecs"]
deserialized_message_map = []
troubles_simulator = []
store_unexpected = []

[dependencies]
lyanne-derive = { path = "derive" }
rand = "^0.8.0"
dashmap = "^6.0.0"
x25519-dalek = "^2.0.0"
chacha20poly1305 = "^0.10.0"
colored = "2.0"
async-channel = "^2.0.0"

smol = { version = "^2.0.0", optional = true }
async-std = { version = "^1.0.0", optional = true }

tokio = { version = "^1.0.0", optional = true, features = ["net"] }

bevy_tasks = { version = "^0.14.0", optional = true }
bevy_ecs = { version = "^0.14.0", optional = true }

async-executor = { version = "^1.13.0", optional = true }
async-net = { version = "^2.0.0", optional = true }
async-lock = { version = "^3.0.0", optional = true }
futures = { version = "^0.3", optional = true, features = ["alloc"] }
futures-timer = { version = "^3.0.0", optional = true }


# sd_bincode
serde = { version = "^1.0.0", features = ["derive"], optional = true }
bincode = { version = "^1.0.0", optional = true }

#auth_tls
futures-rustls = { version = "^0.26.0", optional = true }
tokio-rustls = { version = "^0.26.0", optional = true }
rustls-pemfile = { version = "^2.0.0", optional = true }
