[package]
name = "lyanne-derive"
version = "0.2.0"
edition = "2021"
authors = ["Robsutar"]
description = "Provides packet derive implementations for Lyanne"
readme = "README.md"
repository = "https://github.com/Robsutar/lyanne/"
documentation = "https://docs.rs/lyanne"
license = "MIT OR Apache-2.0"

[dependencies]
syn = "^2.0.0"
quote = "^1.0.0"

[features]
client = []
server = []

sd_bincode = []

bevy_packet_schedules = []

[lib]
proc-macro = true
