[package]
name = "bevy-ping-pong"
version = "0.1.0"
edition = "2021"

[features]
client = ["lyanne/client"]
server = ["lyanne/server"]

[dependencies]
bevy = "^0.14.0"
lyanne = { path = "../../", features = ["bevy-packet-schedules", "sd-bincode"] }
tokio = { version = "^1.0.0", features = ["full"] }
rand = "^0.8.0"
serde = { version = "^1.0.0", features = ["derive"] }
bincode = "^1.0.0"
