[workspace]

[package]
name = "bevy-pong"
version = "0.1.0"
edition = "2021"

[features]
client = ["lyanne/client"]
server = ["lyanne/server"]

[dependencies]
bevy = { version = "^0.14.0", default-features = false }
lyanne = { path = "../../", features = ["bevy_packet_schedules", "sd_bincode"] }
serde = { version = "^1.0.0", features = ["derive"] }
