[package]
name = "conn-it"
version = "0.1.0"
edition = "2021"

[dependencies]
lyanne = { path = "../../", features = [
    "server",
    "client",
    "sd_bincode",
    "rt_smol",
] }
smol = { version = "^2.0.0" }
serde = { version = "^1.0.0", features = ["derive"] }
futures-timer = { version = "^3.0.0" }
async-channel = "^2.0.0"
