[package]
name = "bevy-ping-pong-client"
version = "0.1.0"
edition = "2021"

[features]
player-2 = []

[dependencies]
bevy-ping-pong = { path = "../", features = ["client"] }
bevy = "^0.14.0"
lyanne = { path = "../../../", features = [
    "bevy_packet_schedules",
    "rt_bevy",
    "sd_bincode",
    "troubles_simulator",
    "auth_tls",
    "auth_tcp",
    "client",
] }
tokio = { version = "^1.0.0", optional = true, features = ["full"] }
rand = "^0.8.0"
