[package]
name = "bevy-ping-pong-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["rt-bevy"]
rt-tokio = ["dep:tokio", "lyanne/rt-tokio"]
rt-bevy = ["lyanne/rt-bevy"]

[dependencies]
bevy-ping-pong = { path = "../", features = ["server"] }
bevy = "^0.14.0"
lyanne = { path = "../../../", features = [
    "bevy-packet-schedules",
    "sd-bincode",
    "troubles_simulator",
    "server",
] }
tokio = { version = "^1.0.0", optional = true, features = ["full"] }
rand = "^0.8.0"
