[package]
name = "bevy-ping-pong-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-ping-pong = { path = "../", features = ["server"] }
bevy = "^0.14.0"
lyanne = { path = "../../../", features = [
    "bevy_packet_schedules",
    "rt_bevy",
    "sd_bincode",
    "troubles_simulator",
    "auth_tls",
    "auth_tcp",
    "server",
] }
tokio = { version = "^1.0.0", optional = true, features = ["full"] }
rand = "^0.8.0"
