[package]
name = "bevy-pong-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-pong = { path = "../", features = ["server"] }
bevy = "^0.14.0"
lyanne = { path = "../../../", features = [
    "rt_bevy",
    "store_unexpected",
    "auth_tls",
    "auth_tcp",
    "server",
] }
rand = "^0.8.0"
