[package]
name = "tokio-chat-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-chat = { path = "../", features = ["client"] }
lyanne = { path = "../../../", features = [
    "rt_tokio",
    "client",
    "store_unexpected",
    "deserialized_message_map",
    "auth_tls",
] }
tokio = { version = "^1.0.0", features = ["full"] }
